garage/garage-s3-web-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: garage
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
  name: garage-s3-web
  namespace: garage
spec:
  hostnames:
    - '*.web.raft.lutris.house'
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: garage-gateway
      namespace: garage
      sectionName: s3web
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: garage-gateway
      namespace: garage
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: garage
          port: 3902
          weight: 100
      matches:
        - path:
            type: PathPrefix
            value: /
