garage/garage-webui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: webui
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
  name: garage-webui
  namespace: garage
spec:
  hostnames:
    - garage.raft.lutris.house
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: garage-gateway
      namespace: garage
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: garage-webui
          port: 3909
          weight: 100
      matches:
        - path:
            type: PathPrefix
            value: /
